Course in courses

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -33,9 +33,9 @@
     </div>
 </header>
 <p>asd</p>
-
-<div ng-controller="MenuCtrl">
+<br><br><br><br>
+<div ng-controller="HomeCtrl">
     <ul>
-        <li ng-repeat="phone in phones">{{phone.name}}</li>
+        <li ng-repeat="course in courses">{{courses.CourseID}}</li>
     </ul>
 </div>
