--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,41 +1,16 @@
-<header>
+<header ng-controller="HomeCtrl">
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="navbar-inner">
-            <a class="brand" href="#">Title</a>
+            <a class="brand" href="#">Students</a>
             <ul class="nav" role="navigation">
-                <li class="dropdown">
-                    <a id="drop1" href="#" role="button" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                <li class="dropdown" ng-repeat="course in courses">
+                    <a id="drop1" href="" role="button" class="dropdown-toggle" data-toggle="dropdown">{{course.intCourseNum}}{{course.txtSpeciality}}<b class="caret"></b></a>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="http://google.com">Action</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#anotherAction">Another action</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Something else here</a></li>
-                        <li role="presentation" class="divider"></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Separated link</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="#" id="drop2" role="button" class="dropdown-toggle" data-toggle="dropdown">Dropdown 2 <b class="caret"></b></a>
-                    <ul class="dropdown-menu" role="menu" aria-labelledby="drop2">
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Action</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Another action</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Something else here</a></li>
-                        <li role="presentation" class="divider"></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Separated link</a></li>
+                        <li role="presentation" ng-if="course.CourseID==class.CourseID" ng-repeat="class in classes" >
+                            <a role="menuitem" tabindex="-1"  href="http://google.com">{{course.intCourseNum}}{{class.txtTitle}}</a></li>
                     </ul>
                 </li>
             </ul>
         </div>
-        <ul class="breadcrumb">
-            <li><a href="#">Home</a> <span class="divider">/</span></li>
-            <li><a href="#">Library</a> <span class="divider">/</span></li>
-            <li class="active">Data</li>
-        </ul>
     </div>
 </header>
-<p>asd</p>
-<br><br><br><br>
-<div ng-controller="HomeCtrl">
-    <ul>
-        <li ng-repeat="course in courses">{{courses.CourseID}}</li>
-    </ul>
-</div>
