--- a/public/views/home.html
+++ b/public/views/home.html
@@ -6,7 +6,7 @@
         <h1>Пульс</h1>
     </div>
 <!-- NEWS BLOCK -->
-<div class="panel panel-info" ng-class="{'panel-warning': n.intImpotrance==1, 'panel-danger': n.intImpotrance==2}" ng-repeat="n in news">
+<div class="panel panel-info" stdata ng-class="{'panel-warning': n.intImpotrance==1, 'panel-danger': n.intImpotrance==2}" ng-repeat="n in lastNews(3)">
   <div class="panel-heading">
     <h3 class="panel-title">{{n.txtTitle}}</h3>
   </div>
@@ -18,8 +18,8 @@
 <!-- PAGER -->
 <nav>
   <ul class="pager">
-    <li class="previous"><a href="#"><span aria-hidden="true">&larr;</span> Older</a></li>
-    <li class="next disabled"><a href="#">Newer <span aria-hidden="true">&rarr;</span></a></li>
+    <li class="previous" ng-click="prevPage()" ng-class="{'disabled': CurPage == totalPages}"><a><span aria-hidden="true">&larr;</span> Older</a></li>
+    <li class="next" ng-click="nextPage()" ng-class="{'disabled': CurPage == 1}"><a>Newer <span aria-hidden="true">&rarr;</span></a></li>
   </ul>
 </nav>
 </article>
