--- a/public/views/header.html
+++ b/public/views/header.html
@@ -1,19 +1,32 @@
 <!-- HEADER -->
 <header ng-controller="HeaderCtrl">
-    <div class="navbar navbar-inverse navbar-fixed-top navbar-default">
-        <div class="navbar-header"><a class="navbar-brand" href="#">Students</a>
-        </div>
-        <div class="container">
-            <ul class="nav navbar-nav" role="navigation">
-                <li class="dropdown" ng-repeat="course in courses"> <a id="drop1" href="" role="button" class="dropdown-toggle" data-toggle="dropdown">{{course.intCourseNum}}{{course.txtSpeciality}}<b class="caret"></b></a>
-                    <ul
-                    class="dropdown-menu" role="menu" aria-labelledby="drop1">
-                        <li role="presentation" ng-if="course.CourseID==class.CourseID" ng-repeat="class in classes"
-                        ng-cloak="ng-cloak"> <a role="menuitem" tabindex="-1" href="http://google.com">{{class.txtTitle}}</a>
-                        </li>
-            </ul>
-            </li>
-            </ul>
-        </div>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Students</a>
     </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="dropdown" ng-repeat="course in courses">
+          <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{course.intCourseNum}}{{course.txtSpeciality}} <span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li ng-if="course.CourseID==class.CourseID" ng-repeat="class in classes"><a href="#">{{class.txtTitle}}</a></li>
+          </ul>
+        </li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="">Авторизация</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 </header>
