Initial classes page support

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -18,8 +18,8 @@
 <!-- PAGER -->
 <nav>
   <ul class="pager">
-    <li class="previous" ng-click="prevPage()" ng-class="{'disabled': CurPage == totalPages}"><a><span aria-hidden="true">&larr;</span> Older</a></li>
-    <li class="next" ng-click="nextPage()" ng-class="{'disabled': CurPage == 1}"><a>Newer <span aria-hidden="true">&rarr;</span></a></li>
+    <li class="previous" ng-click="prevPage()" ng-class="{'disabled': CurPage == totalPages}"><a href="#/"><span aria-hidden="true">&larr;</span> Older</a></li>
+    <li class="next" ng-click="nextPage()" ng-class="{'disabled': CurPage == 1}"><a href="#/">Newer <span aria-hidden="true">&rarr;</span></a></li>
   </ul>
 </nav>
 </article>
