--- a/public/views/header.html
+++ b/public/views/header.html
@@ -10,7 +10,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Students</a>
+      <a class="navbar-brand" href="#/">Students</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -19,12 +19,12 @@
         <li class="dropdown" ng-repeat="course in courses">
           <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{course.intCourseNum}}{{course.txtSpeciality}} <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li ng-if="course.CourseID==class.CourseID" ng-repeat="class in classes"><a href="#">{{class.txtTitle}}</a></li>
+            <li ng-if="course.CourseID==class.CourseID" ng-repeat="class in classes"><a href="#/class/{{class.ClassID}}">{{class.txtTitle}}</a></li>
           </ul>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="">Авторизация</a></li>
+        <li><a href="/login">Авторизация</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
