--- a/public/views/class.html
+++ b/public/views/class.html
@@ -1,6 +1,6 @@
-<!-- //header -->
 <article class="myWrap" ng-controller="ClassCtrl">
     <div class="page-header">
-        <h1>{{classID}}<small>{{classDesc}}</small></h1>
+        <h1>{{classes[classID-1].txtTitle}}<small><em>{{classes[classID-1].txtShortDesc}}</em></small></h1>
+
     </div>
 </article>
