Messing around lecture list template

--- a/public/views/class.html
+++ b/public/views/class.html
@@ -1,6 +1,50 @@
 <article class="myWrap" ng-controller="ClassCtrl">
     <div class="page-header">
         <h1>{{classes[classID-1].txtTitle}}<small><em>{{classes[classID-1].txtShortDesc}}</em></small></h1>
-
     </div>
+    <div class="panel panel-default">
+  <div class="panel-heading">Panel heading without title</div>
+  <div class="panel-body">
+    Panel content
+  </div>
+         <ul class="list-group">
+    <li class="list-group-item">Cras justo odio</li>
+    <li class="list-group-item">Dapibus ac facilisis in</li>
+    <li class="list-group-item">Morbi leo risus</li>
+    <li class="list-group-item">Porta ac consectetur ac</li>
+    <li class="list-group-item">Vestibulum at eros</li>
+  </ul>
+    <div class="well well-lg">...</div>
+</div>
+
+    <div class="list-group">
+  <a href="#" class="list-group-item active">
+    <h4 class="list-group-item-heading">List group item heading</h4>
+    <p class="list-group-item-text">assad</p>
+  </a>
+  <a href="#" class="list-group-item">
+    <h4 class="list-group-item-heading">List group item heading</h4>
+    <p class="list-group-item-text">assad2</p>
+  </a>
+</div>
+
+    <div class="panel panel-default">
+  <div class="panel-heading">Panel heading without title</div>
+  <div class="panel-body">
+        <div class="list-group">
+  <a href="#" class="list-group-item active">
+    <h4 class="list-group-item-heading">List group item heading</h4>
+    <p class="list-group-item-text">assad</p>
+  </a>
+  <a href="#" class="list-group-item">
+    <h4 class="list-group-item-heading">List group item heading</h4>
+    <p class="list-group-item-text">assad2</p>
+  </a>
+</div>
+
+      <div class="well well-lg">...</div>
+  </div>
+</div>
+
+<div class="well well-lg">Well</div>
 </article>
