Angular directives for Bootstrap

--- a/public/views/header.html
+++ b/public/views/header.html
@@ -24,7 +24,7 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/login">Авторизация</a></li>
+        <li ng-controller="LoginCtrl" ng-click="open()"><a href="">Авторизация</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
