Fix of fixes. FINALLY!

--- a/public/views/class.html
+++ b/public/views/class.html
@@ -1,4 +1,4 @@
-<article class="myWrap" ng-controller="ClassCtrl">
+<article class="myWrap">
     <div class="page-header">
         <h1>{{classes[classID-1].txtTitle}}<small><em>{{classes[classID-1].txtShortDesc}}</em></small></h1>
     </div>
@@ -7,12 +7,8 @@
   <div class="panel-body">
     Panel content
   </div>
-         <ul class="list-group">
-    <li class="list-group-item">Cras justo odio</li>
-    <li class="list-group-item">Dapibus ac facilisis in</li>
-    <li class="list-group-item">Morbi leo risus</li>
-    <li class="list-group-item">Porta ac consectetur ac</li>
-    <li class="list-group-item">Vestibulum at eros</li>
+         <ul class="list-group" ng-repeat="c in courses">
+    <li class="list-group-item">{{c.txtTitle}}</li>
   </ul>
     <div class="well well-lg">...</div>
 </div>
