--- a/public/views/header.html
+++ b/public/views/header.html
@@ -23,9 +23,9 @@
           </ul>
         </li>
       </ul>
-      <ul class="nav navbar-nav navbar-right">
+      <!--<ul class="nav navbar-nav navbar-right">
         <li ng-controller="LoginCtrl" ng-click="open()"><a href="">Авторизация</a></li>
-      </ul>
+      </ul> -->
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
