--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,20 +1,26 @@
-<div class="modal-header" >
-        <h2 class="form-signin-heading">Вход в панель администратора</h2>
+<article class="loginPage" ng-controller="LoginModalCtrl">
+<div class="page-header" >
+        <h2 class="form-signin-heading">Вход</h2>
 </div>
-<div class="modal-body">
+<div class="page-body">
 <alert ng-if="loggedOn==1" type="success">Вход выполнен. Типа.</alert>
 <alert ng-if="loggedOn==0" type="danger">Черт. Что-то пошло не так...</alert>
     <form class="form-signin" action="../../_protected/auth.php" method="post">
-        <input type="login" id="login" class="form-control" placeholder="Логин" name="login" required autofocus ng-model="user.login"><br>
-        <input type="password" id="password" class="form-control" placeholder="Пароль" name="password" required ng-model="user.pass">
+        <div style="margin-bottom: 25px" class="input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+            <input id="login-username" type="text" class="form-control" name="username" value="" placeholder="Логин" required autofocus ng-model="user.login">
+        </div>
+         <div style="margin-bottom: 25px" class="input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+            <input id="login-password" type="password" class="form-control" name="password" placeholder="Пароль" required ng-model="user.pass">
+        </div>
         <!--<div class="checkbox">
             <label>
                 <input type="checkbox" value="remember-me"> Запомнить меня
             </label>
         </div>-->
         </div>
-<div class="modal-footer">
         <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="tryLogin()">Войти</button>
-</div>
     </form>
 </div>
+</article>
