--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,26 +1,30 @@
-<article class="loginPage" ng-controller="LoginModalCtrl">
-<div class="page-header" >
-        <h2 class="form-signin-heading">Вход</h2>
-</div>
-<div class="page-body">
-<alert ng-if="loggedOn==1" type="success">Вход выполнен. Типа.</alert>
-<alert ng-if="loggedOn==0" type="danger">Черт. Что-то пошло не так...</alert>
-    <form class="form-signin" action="../../_protected/auth.php" method="post">
-        <div style="margin-bottom: 25px" class="input-group">
-            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-            <input id="login-username" type="text" class="form-control" name="username" value="" placeholder="Логин" required autofocus ng-model="user.login">
-        </div>
-         <div style="margin-bottom: 25px" class="input-group">
-            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-            <input id="login-password" type="password" class="form-control" name="password" placeholder="Пароль" required ng-model="user.pass">
-        </div>
+<div class="modal show" ng-controller="LoginModalCtrl">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header" >
+                <h4 class="modal-title">Вход</h4>
+            </div>
+            <div class="modal-body">
+            <alert ng-if="loggedOn==1"  type="success">Вход выполнен. Типа.</alert>
+            <alert ng-if="loggedOn==0" type="danger">Черт. Что-то пошло не так...</alert>
+            <form class="form-signin" method="post" name="loginForm" ng-Submit="tryLogin()">
+                <div style="margin-bottom: 25px" class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                    <input id="login-username" type="text" class="form-control" name="username" value="" placeholder="Логин" required autofocus ng-model="user.login">
+                </div>
+                <div style="margin-bottom: 25px" class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                    <input id="login-password" type="password" class="form-control" name="password" placeholder="Пароль" required ng-model="user.pass">
+                </div>
         <!--<div class="checkbox">
             <label>
                 <input type="checkbox" value="remember-me"> Запомнить меня
             </label>
         </div>-->
+                <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit" ng-click="tryLogin()">Войти</button>
-    </form>
+            </form>
+        </div>
+    </div>
 </div>
-</article>
+</div>
