--- a/public/views/header.html
+++ b/public/views/header.html
@@ -10,7 +10,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#/">Students</a>
+      <a class="navbar-brand" href="#/news">Students</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
