--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,4 +1,4 @@
-<div class="modal show" data-ng-controller="LoginModalCtrl">
+<div class="modal" data-ng-class="{hide: success, show:!success}" data-ng-controller="LoginModalCtrl">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header" >
@@ -6,7 +6,7 @@
             </div>
             <div class="modal-body">
             <alert ng-if="loggedIn==true"  type="success">Вход выполнен. Типа.</alert>
-            <alert ng-if="loggedIn==false" type="danger">Черт. Что-то пошло не так...</alert>
+            <alert ng-if="loginFailed" type="danger">Черт. Что-то пошло не так...</alert>
             <form class="form-signin" method="post" name="loginForm" data-ng-Submit="login(credentials)">
                 <div style="margin-bottom: 25px" class="input-group">
                     <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
