--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,4 +1,4 @@
-<div class="modal" data-ng-class="{hide: success, show:!success}" data-ng-controller="LoginModalCtrl">
+<div data-ng-controller="LoginModalCtrl">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header" >
