--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,29 +1,30 @@
-<div data-ng-controller="LoginModalCtrl">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header" >
-                <h4 class="modal-title">Вход</h4>
-            </div>
-            <div class="modal-body">
-            <alert data-ng-if="loggedIn==true"  type="success">Вход выполнен. Типа.</alert>
+<div class="modal-dialog">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h4 class="modal-title" id="loginLabel">Авторизация</h4>
+        </div>
+        <div class="modal-body">
+            <alert data-ng-if="loggedIn==true" type="success">Вход выполнен. Типа.</alert>
             <alert data-ng-if="loginFailed" type="danger">Черт. Что-то пошло не так...</alert>
             <form class="form-signin" method="post" name="loginForm" data-ng-Submit="login(credentials)">
                 <div style="margin-bottom: 25px" class="input-group">
                     <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                    <input id="login-username" type="text" class="form-control" name="username" value="" placeholder="Логин" required autofocus data-ng-model="credentials.username">
+                    <input id="login-username" type="text" class="form-control" name="username" value=""
+                           placeholder="Логин" required autofocus data-ng-model="credentials.username">
                 </div>
                 <div style="margin-bottom: 25px" class="input-group">
                     <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                    <input id="login-password" type="password" class="form-control" name="password" placeholder="Пароль" required data-ng-model="credentials.pass">
+                    <input id="login-password" type="password" class="form-control" name="password" placeholder="Пароль"
+                           required data-ng-model="credentials.pass">
                 </div>
-        <!--<div class="checkbox">
-            <label>
-                <input type="checkbox" value="remember-me"> Запомнить меня
-            </label>
-        </div>-->
+                <!--<div class="checkbox">
+                    <label>
+                        <input type="checkbox" value="remember-me"> Запомнить меня
+                    </label>
+                </div>-->
                 <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
             </form>
-            </div>
         </div>
     </div>
 </div>
+
