--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,3 +1,4 @@
+<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginLabel" aria-hidden="true">
 <div class="modal-dialog">
     <div class="modal-content">
         <div class="modal-header">
@@ -27,4 +28,4 @@
         </div>
     </div>
 </div>
-
+</div>
