--- a/public/views/login.html
+++ b/public/views/login.html
@@ -18,6 +18,7 @@
                     <input id="login-password" type="password" class="form-control" name="password" placeholder="Пароль"
                            required data-ng-model="credentials.pass">
                 </div>
+                <!--TODO: -->
                 <!--<div class="checkbox">
                     <label>
                         <input type="checkbox" value="remember-me"> Запомнить меня
