Even more commenting!

--- a/public/views/class.html
+++ b/public/views/class.html
@@ -7,8 +7,8 @@
   <div class="panel-body">
     Panel content
   </div>
-         <ul class="list-group" ng-repeat="c in courses">
-    <li class="list-group-item">{{c.txtTitle}}</li>
+         <ul class="list-group" data-ng-repeat="art in articles">
+    <li class="list-group-item">{{art.txtTitle}}</li>
   </ul>
     <div class="well well-lg">...</div>
 </div>
