Class page template

--- a/public/views/class.html
+++ b/public/views/class.html
@@ -1,46 +1,20 @@
 <article class="myWrap">
     <div class="page-header">
-        <h1>{{classes[classID-1].txtTitle}}<small><em>{{classes[classID-1].txtShortDesc}}</em></small></h1>
+        <h1>{{classes[classID-1].txtTitle}}
+            <small><em>{{classes[classID-1].txtShortDesc}}</em></small>
+        </h1>
     </div>
-    <div class="panel panel-default">
-  <div class="panel-heading">Panel heading without title</div>
-  <div class="panel-body">
-    Panel content
-  </div>
-         <ul class="list-group" data-ng-repeat="art in articles">
-    <li class="list-group-item">{{art.txtTitle}}</li>
-  </ul>
-    <div class="well well-lg">...</div>
-</div>
 
-    <div class="list-group">
-  <a href="#" class="list-group-item active">
-    <h4 class="list-group-item-heading">List group item heading</h4>
-    <p class="list-group-item-text">assad</p>
-  </a>
-  <a href="#" class="list-group-item">
-    <h4 class="list-group-item-heading">List group item heading</h4>
-    <p class="list-group-item-text">assad2</p>
-  </a>
-</div>
-
-    <div class="panel panel-default">
-  <div class="panel-heading">Panel heading without title</div>
-  <div class="panel-body">
-        <div class="list-group">
-  <a href="#" class="list-group-item active">
-    <h4 class="list-group-item-heading">List group item heading</h4>
-    <p class="list-group-item-text">assad</p>
-  </a>
-  <a href="#" class="list-group-item">
-    <h4 class="list-group-item-heading">List group item heading</h4>
-    <p class="list-group-item-text">assad2</p>
-  </a>
-</div>
-
-      <div class="well well-lg">...</div>
-  </div>
-</div>
-
-<div class="well well-lg">Well</div>
+    <accordion close-others="oneAtATime">
+        <accordion-group data-ng-repeat="art in articles" class="panel panel-info" is-open="status.open">
+            <accordion-heading><strong>{{$index+1}}.</strong> {{art.txtTitle}}
+                <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
+            </accordion-heading>
+            {{art.txtdesc}}
+            <blockquote>
+                <p>Вложение 1</p>
+                <p>Вложение 2</p>
+            </blockquote>
+        </accordion-group>
+    </accordion>
 </article>
