Bootstrap responsive design

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,4 +1,4 @@
-<article class="myWrap" data-ng-controller="NewsCtrl">
+<article class="myWrap col-md-10 col-xs-12 col-sm-12" data-ng-controller="NewsCtrl" >
     <div class="page-header">
         <h1>Пульс</h1>
     </div>
