--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,13 +9,13 @@ body
 .myWrap
 {
     margin: 0 auto;
-    width: 70%;
-    padding: 12px;
+    padding: 12px 20px;
     background: #FFF;
     border-radius: 5px;
     -webkit-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.53); /*Chrome 4-9 */
     -moz-box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.53); /*FF 3.5-3.6 */
     box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.53);
+    float: inherit;
 }
 
 .right-align
