--- a/public/views/class.html
+++ b/public/views/class.html
@@ -1,20 +1,26 @@
-<article class="myWrap">
+<article class="myWrap col-md-10 col-xs-12 col-sm-12">
     <div class="page-header">
         <h1>{{classes[classID-1].txtTitle}}
             <small><em>{{classes[classID-1].txtShortDesc}}</em></small>
         </h1>
     </div>
+    <div class="row">
+        <accordion close-others="oneAtATime" class="col-md-9">
+            <accordion-group data-ng-repeat="art in articles" class="panel panel-info" is-open="status.open">
+                <accordion-heading><strong>{{$index+1}}.</strong> {{art.txtTitle}}
+                    <i class="pull-right glyphicon"
+                       ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
+                </accordion-heading>
+                {{art.txtdesc}}
+                <blockquote>
+                    <p>Вложение 1</p>
 
-    <accordion close-others="oneAtATime">
-        <accordion-group data-ng-repeat="art in articles" class="panel panel-info" is-open="status.open">
-            <accordion-heading><strong>{{$index+1}}.</strong> {{art.txtTitle}}
-                <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
-            </accordion-heading>
-            {{art.txtdesc}}
-            <blockquote>
-                <p>Вложение 1</p>
-                <p>Вложение 2</p>
-            </blockquote>
-        </accordion-group>
-    </accordion>
+                    <p>Вложение 2</p>
+                </blockquote>
+            </accordion-group>
+        </accordion>
+        <div class="col-md-3 col-xs-4">
+            <datepicker ng-model="dt" min-date="minDate" show-weeks="true" class="well well-sm row col-md-12"></datepicker>
+        </div>
+    </div>
 </article>
