--- a/public/views/class.html
+++ b/public/views/class.html
@@ -19,7 +19,7 @@
                 </blockquote>
             </accordion-group>
         </accordion>
-        <div ui-calendar="uiConfig.calendar" class="col-md-3 col-xs-12" data-ng-model="eventSources"></div>
+        <div ui-calendar="uiConfig.calendar" class="col-md-3 col-xs-12" data-ng-model="eventSources" calendar="lecturesCalendar"></div>
     </div>
 
 </article>
