--- a/public/views/header.html
+++ b/public/views/header.html
@@ -16,7 +16,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-            <li data-ng-if="class.CourseID == currentUser.course" data-ng-repeat="class in classes"><a href="#/class/{{class.ClassID}}">{{class.txtTitle}}</a></li>
+            <li data-ng-if="discipline.course_id == currentUser.course" data-ng-repeat="discipline in disciplines"><a href="#/class/{{discipline.discipline_id}}">{{discipline.title}}</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right" data-ng-if="isAuthenticated()">
         <li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{currentUser.name}}<span class="caret"></span></a>
