--- a/public/views/home.html
+++ b/public/views/home.html
@@ -4,15 +4,15 @@
     </div>
     <!-- NEWS BLOCK -->
     <!--  -->
-    <div class="panel panel-info" data-ng-repeat="n in lastNews(3) track by $index" data-ng-if="n.txtTitle!=null">
+    <div class="panel panel-info" data-ng-repeat="n in lastNews(3) track by $index" data-ng-if="n.title!=null">
         <div class="panel-heading">
-            <h3 class="panel-title">{{n.txtTitle}}</h3>
+            <h3 class="panel-title">{{n.title}}</h3>
         </div>
         <div class="panel-body">
-            {{n.txtNews}}
+            {{n.news}}
         </div>
-        <div data-ng-switch="n.intImpotrance" class="panel-footer">
-            <small><em>{{n.dateCreated|moment: 'lang': 'ru' | moment: 'format': 'LL'}}</em></small>
+        <div data-ng-switch="n.importance" class="panel-footer">
+            <small><em>{{n.date_created|moment: 'lang': 'ru' | moment: 'format': 'LL'}}</em></small>
             <span data-ng-switch-when="1" class="label label-warning" style="float:right;">Обратите внимание</span>
             <span data-ng-switch-when="2" class="label label-danger" style="float:right;">Важно</span>
         </div>
