--- a/public/views/discipline.html
+++ b/public/views/discipline.html
@@ -12,14 +12,26 @@
                        data-ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
                 </accordion-heading>
                 <p>{{lesson.description}}</p>
+
                 <div class="bs-callout bs-callout-primary" data-ng-repeat="atc in attachments"
                      data-ng-if="lesson.lecture_id==atc.lecture_id">
                     <h4><a href="{{atc.url}}"><span class="glyphicon glyphicon-cloud-download"
-                                                       aria-hidden="true"></span> {{atc.title}}</a></h4>
+                                                    aria-hidden="true"></span> {{atc.title}}</a></h4>
                     {{atc.description}}
                 </div>
                 <br>
-                <div class="accordion-footer">Сдать до {{lesson.date_dead_line | moment: 'lang': 'ru' | moment: 'format': 'LL' }}</div>
+
+                <div class="accordion-footer">Сдать до {{lesson.date_dead_line | moment: 'lang': 'ru' | moment:
+                    'format': 'LL' }}
+                    <span data-ng-repeat="result in results" data-ng-if="lesson.lecture_id==result.lecture_id">
+                    <span data-ng-if="result.result==1||result.result==3||result.result==4||result.result==5"
+                          class="pull-right">Зачтено <span class="glyphicon glyphicon-ok"
+                                                           aria-hidden="true"></span>
+                    </span>
+                    <span data-ng-if="result.result==0||result.result==2" class="pull-right">Не зачтено
+                        <span class="glyphicon glyphicon-remove" aria-hidden="true"></span></span>
+                    </span>
+                </div>
             </accordion-group>
         </accordion>
         <div data-ui-calendar="uiConfig.calendar" class="col-md-5 col-xs-12" data-ng-model="eventSources"
