Changed way of forming header (seperate for teachers and students)

--- a/public/views/discipline.html
+++ b/public/views/discipline.html
@@ -1,7 +1,7 @@
 <article class="myWrap col-md-10 col-xs-12 col-sm-12">
     <div class="page-header">
-        <h1>{{disciplines[disciplineID-1].title}}
-            <small><em>{{disciplines[disciplineID-1].txtShortDesc}}</em></small>
+        <h1>{{disciplineTitle}}
+            <small><em>{{disciplineDescription}}</em></small>
         </h1>
     </div>
     <div class="row">
