--- a/public/views/header.html
+++ b/public/views/header.html
@@ -1,33 +1,47 @@
 <!-- HEADER -->
 <header data-ng-controller="HeaderCtrl" data-ng-cloak>
-<nav class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#/news">Students</a>
-    </div>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                        data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand">[Students]</a>
+            </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-            <li data-ng-if="discipline.course_id == currentUser.course" data-ng-repeat="discipline in disciplines"><a href="#/class/{{discipline.discipline_id}}">{{discipline.title}}</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right" data-ng-if="isAuthenticated()">
-        <li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{currentUser.name}}<span class="caret"></span></a>
-            <ul class="dropdown-menu" role="menu">
-                <li><a href="">Профиль (NYI)</a></li>
-                <li class="divider"></li>
-                <li class="logout"><a href="" data-ng-click="logout()">Выход</a></li>
-            </ul>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li><a href="#/news">Новости</a></li>
+                    <li data-ng-if="currentUser.userRole == 'student' && disciplines.length<4"
+                        data-ng-repeat="discipline in disciplines"><a href="#/class/{{discipline.discipline_id}}">{{discipline.title}}</a>
+                    </li>
+                    <li data-ng-if="currentUser.userRole == 'admin' || disciplines.length >= 4 " class="dropdown"><a
+                            href="" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                            aria-expanded="false">Предметы<span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li data-ng-repeat="discipline in disciplines"><a href="#/class/{{discipline.discipline_id}}">{{discipline.title}}</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right" data-ng-if="isAuthenticated()">
+                    <li class="dropdown"><a href="" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                                            aria-expanded="false">{{currentUser.name}}<span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="">Профиль (NYI)</a></li>
+                            <li class="divider"></li>
+                            <li class="logout"><a href="" data-ng-click="logout()">Выход</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
 </header>
