--- a/public/views/home.html
+++ b/public/views/home.html
@@ -5,16 +5,19 @@
     <!-- NEWS BLOCK -->
     <!--  -->
     <p>{{editableTitle}}</p>
+
     <div class="panel panel-info" data-ng-repeat="n in lastNews(3) track by $index" data-ng-if="n.title!=null">
         <div class="panel-heading">
             <h3 class="panel-title" data-ng-if="!editMode || (editMode && n.news_id != idInDB)">{{n.title}}</h3>
             <input type="text" class="form-control" data-ng-model="editable.title"
                    data-ng-if="editMode && n.news_id == idInDB " required>
         </div>
-        <div class="panel-body" data-ng-if="!editMode || (editMode && n.news_id != idInDB)" data-ta-bind data-ng-model="n.news">
+        <div class="panel-body" data-ng-if="!editMode || (editMode && n.news_id != idInDB)" data-ta-bind
+             data-ng-model="n.news">
         </div>
         <a data-ng-click="turnEditMode(n.news_id)" data-ng-if="currentUser.userRole == 'admin'">Edit
             {{n.news_id}}</a>
+
         <div class="panel-body" data-ng-if="editMode && n.news_id == idInDB">
             <div data-text-angular="" data-ng-model="editable.news"></div>
             <button type="button" class="btn btn-success" data-ng-click="performEdit()">Сохранить</button>
@@ -22,8 +25,17 @@
         </div>
         <div data-ng-switch="n.importance" class="panel-footer">
             <small><em>{{n.date_created|moment: 'lang': 'ru' | moment: 'format': 'LL'}}</em></small>
-            <span data-ng-switch-when="1" class="label label-warning" style="float:right;">Обратите внимание</span>
-            <span data-ng-switch-when="2" class="label label-danger" style="float:right;">Важно</span>
+            <span data-ng-switch-when="1" data-ng-if="!editMode || (editMode && n.news_id != idInDB)"
+                  class="label label-warning pull-right">Обратите внимание</span>
+            <span data-ng-switch-when="2" data-ng-if="!editMode || (editMode && n.news_id != idInDB)"
+                  class="label label-danger pull-right">Важно</span>
+
+            <div class="btn-group pull-right" data-ng-if="editMode && n.news_id == idInDB">
+                <label class="ta-news-label" data-ng-model="editable.label" data-btn-radio="'1'" data-uncheckable><span
+                        class="label label-warning pull-right">Обратите внимание</span></label>
+                <label class="ta-news-label" data-ng-model="editable.label" data-btn-radio="'2'" data-uncheckable><span
+                        class="label label-danger pull-right">Важно</span></label>
+            </div>
         </div>
     </div>
     <!-- PAGER -->
