--- a/public/views/newsEditor.html
+++ b/public/views/newsEditor.html
@@ -1,6 +1,6 @@
 <div class="panel panel-info">
     <div class="panel-heading">
-        <input type="text" class="form-control" data-ng-model="editable.title" required>
+        <input type="text" class="form-control" data-ng-model="editable.title" required placeholder="Заголовок">
     </div>
     <div class="panel-body">
         <div data-text-angular="" data-ng-model="editable.news"></div>
