--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,6 +1,8 @@
 <article class="myWrap col-md-10 col-xs-12 col-sm-12" data-ng-controller="NewsCtrl">
     <div class="page-header">
-        <h1>Новости</h1>
+        <h1>Новости <button type="button" class="btn btn-default btn-lg pull-right">
+            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> <span class="hidden-xs">Новая</span>
+        </button></h1>
     </div>
     <!-- NEWS BLOCK -->
     <!--  -->
@@ -11,26 +13,41 @@
         <div class="panel panel-info" data-ng-if="!editMode || (editMode && n.news_id != idInDB)"
              data-ng-hide="!n.news_id">
             <div class="panel-heading">
-                <h3 class="panel-title">{{n.title}}</h3>
+                <div class="pull-right">
+                    <button type="button" class="btn btn-primary btn-xs" data-ng-click="turnEditMode(n.news_id)"
+                            data-ng-if="currentUser.userRole == 'admin'">
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                    </button>
+                    <button type="button" class="btn btn-danger btn-xs"
+                            data-ng-really-message="Вы собираетесь удалить запись <strong>«{{n.title}}»</strong> от {{n.date_created|moment: 'lang': 'ru' | moment: 'format': 'LL'}}<br>Продолжить?"
+                            data-ng-really-click="deleteNews(n.news_id)"
+                            data-ng-if="currentUser.userRole == 'admin'">
+                        <span class="glyphicon glyphicon-erase" aria-hidden="true"></span>
+                    </button>
+                </div>
+                <h3 class="panel-title">{{n.title}}
+                </h3>
             </div>
             <div class="panel-body" data-ta-bind data-ng-model="n.news">
             </div>
-            <a data-ng-click="turnEditMode(n.news_id)" data-ng-if="currentUser.userRole == 'admin'">Edit
-                {{n.news_id}}</a>
-            <a data-ng-really-message="Вы собираетесь удалить запись <strong>«{{n.title}}»</strong> от {{n.date_created|moment: 'lang': 'ru' | moment: 'format': 'LL'}}<br>Продолжить?"
-               data-ng-really-click="deleteNews(n.news_id)"
-               data-ng-if="currentUser.userRole == 'admin'">Delete
-                {{n.news_id}}</a>
 
             <div data-ng-switch="n.importance" class="panel-footer">
-                <small><em>{{n.date_created|moment: 'lang': 'ru' | moment: 'format': 'LL'}}</em></small>
-            <span data-ng-switch-when="1"
-                  class="label label-warning pull-right">Обратите внимание</span>
-            <span data-ng-switch-when="2"
-                  class="label label-danger pull-right">Важно</span>
+                <span data-ng-switch-when="1"
+                      class="label label-warning pull-right">Обратите внимание</span>
+                <span data-ng-switch-when="2"
+                      class="label label-danger pull-right">Важно</span>
+                <!-- Date formatting for large devices -->
+                <div class="hidden-xs">
+                    <small><em>{{n.date_created|moment: 'lang': 'ru' | moment: 'format': 'LL'}}</em></small>
+                </div>
+                <!-- Date formatting for small devices -->
+                <div class="visible-xs">
+                    <small><em>{{n.date_created|moment: 'lang': 'ru' | moment: 'format': 'L'}}</em></small>
+                </div>
             </div>
         </div>
     </div>
     <!-- PAGER -->
-    <pager total-items="totalItems" ng-model="currentPage" items-per-page="3" next-text="Старые »" previous-text="« Новые"></pager>
+    <pager total-items="totalItems" ng-model="currentPage" items-per-page="3" next-text="Старые »"
+           previous-text="« Новые"></pager>
 </article>
